force-app/main/default/objects/Job__c/fields/Company_Site__c.field-meta.xml
<CustomField>
    <fullName>Company_Site__c</fullName>
    <label>Company Site</label>
    <type>Url</type>
</CustomField>