force-app/main/default/objects/Job__c/fields/Is_Compliance_with_Govt_Policies__c.field-meta.xml
<CustomField>
    <fullName>Is_Compliance_with_Govt_Policies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Compliance with Govt Policies</label>
    <type>Checkbox</type>
</CustomField>