force-app/main/default/objects/Job__c/fields/Job_Grade__c.field-meta.xml
<CustomField>
    <fullName>Job_Grade__c</fullName>
    <label>Job Grade</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Job_Industry__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Manager/Team Lead</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>Dept Head</fullName>
            </value>
            <value>
                <fullName>Engineer</fullName>
            </value>
            <value>
                <fullName>Territory Manager</fullName>
            </value>
            <value>
                <fullName>Department head</fullName>
            </value>
            <value>
                <fullName>Daily labor</fullName>
            </value>
            <value>
                <fullName>Security IN charge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>