force-app/main/default/objects/Job__c/fields/Job_Number__c.field-meta.xml
<CustomField>
    <fullName>Job_Number__c</fullName>
    <displayFormat>J-{000}</displayFormat>
    <label>Job Number</label>
    <type>AutoNumber</type>
</CustomField>