force-app/main/default/objects/Job__c/fields/Job_Region__c.field-meta.xml
<CustomField>
    <fullName>Job_Region__c</fullName>
    <label>Job Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>North Americas</fullName>
            </value>
            <value>
                <fullName>South Americas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>