force-app/main/default/objects/Job__c/fields/Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Job_Role__c</fullName>
    <label>Job Role</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Job_Grade__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finance Director</fullName>
            </value>
            <value>
                <fullName>Sales Director</fullName>
            </value>
            <value>
                <fullName>Operations Director</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>CFO</fullName>
            </value>
            <value>
                <fullName>VP</fullName>
            </value>
            <value>
                <fullName>AVP</fullName>
            </value>
            <value>
                <fullName>Salesforce Lead</fullName>
            </value>
            <value>
                <fullName>Java Lead</fullName>
            </value>
            <value>
                <fullName>QA Lead</fullName>
            </value>
            <value>
                <fullName>DevOps lead</fullName>
            </value>
            <value>
                <fullName>Technical Architect</fullName>
            </value>
            <value>
                <fullName>Data Security Architect</fullName>
            </value>
            <value>
                <fullName>Process Architect</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas Department head</fullName>
            </value>
            <value>
                <fullName>Steel Department head</fullName>
            </value>
            <value>
                <fullName>Security department head</fullName>
            </value>
            <value>
                <fullName>Security IN charge</fullName>
            </value>
            <value>
                <fullName>Floor IN charge</fullName>
            </value>
            <value>
                <fullName>Service IN charge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>