force-app/main/default/objects/Job__c/fields/Languages_to_be_Known__c.field-meta.xml
<CustomField>
    <fullName>Languages_to_be_Known__c</fullName>
    <label>Languages to be Known</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Job_Region__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Polish</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Hindi</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>