force-app/main/default/objects/Job__c/fields/Number_of_Full_filled_positions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Full_filled_positions__c</fullName>
    <label>Number of Full filled positions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>