force-app/main/default/objects/Job__c/fields/Target_Filled_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Filled_Date__c</fullName>
    <label>Target Filled Date</label>
    <type>Date</type>
</CustomField>