force-app/main/default/objects/Job__c/fields/Total_Fee_from_Company__c.field-meta.xml
<CustomField>
    <fullName>Total_Fee_from_Company__c</fullName>
    <label>Total Fee from Company</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>