force-app/main/default/objects/Job__c/validationRules/Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>DATETIMEVALUE( Target_Filled_Date__c ) &lt;     NOW()</errorConditionFormula>
    <errorMessage>Target Filled Date cannot be past date</errorMessage>
</ValidationRule>