force-app/main/default/objects/Job__c/validationRules/Fee_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Fee_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Total_Fee_from_Company__c )</errorConditionFormula>
    <errorMessage>Fee cannot be null</errorMessage>
</ValidationRule>