force-app/main/default/objects/Job__c/validationRules/Position_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Position_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Number_of_Positions__c  &lt;= 0  ||  Number_of_Positions__c &lt;  Number_of_Full_filled_positions__c ||   ISBLANK(Number_of_Positions__c)</errorConditionFormula>
    <errorMessage>Positions should be a valid number greater than 0</errorMessage>
</ValidationRule>