force-app/main/default/objects/Job__c/validationRules/Salary_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Salary_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Max_Salary__c  &lt;  Min_Salary__c</errorConditionFormula>
    <errorMessage>Enter valid Salary range</errorMessage>
</ValidationRule>